gcc/testsuite/rust/rustc/ui/error-codes/ex-E0612.rs
struct Foo(u32);

fn main() {
   let y = Foo(0);
   y.1; // { dg-error ".E0609." "" { target *-*-* } }
}

